<resources>
    <string name="app_name">Eteration Store</string>
    <string name="home">Home</string>
    <string name="cart">Cart</string>
    <string name="favorites">Favorites</string>
    <string name="empty">There is still nothing here!</string>
    <string name="profile">Profile</string>
    <string name="filters">Filters:</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="added_into_cart">added into cart</string>
    <string name="added_into_favs">added into favs</string>
    <string name="price">Price:</string>
    <string name="total">Total:</string>
    <string name="select_filter">Select Filter</string>
    <string name="complete">Complete</string>
    <string name="filter">Filter</string>
    <string name="brand">Brand</string>
    <string name="model">Model</string>
    <string name="new_to_old">New to old</string>
    <string name="price_low_to_high">Price low to high</string>
    <string name="old_to_new">Old to new</string>
    <string name="price_high_to_low">Price high to low</string>
    <string name="sort_by">Sort By</string>
    <string name="primary">Primary</string>
    <string name="try_again">Try Again</string>
    <string name="retry">Retry</string>
    <string name="priceIcon">₺</string>
    <string name="added">Added</string>
    <string name="complete_successful">Complete Successful</string>
    <string name="deleted">deleted</string>
    <string name="profile_fragment">Profile Fragment</string>
    <string name="plus">+</string>
    <string name="user_name">Nisa Efendioğlu</string>
    <string name="user_email">nisa.efendioglu@eteration.com</string>
</resources>