<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.cart.CartFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/cart_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextAppearance="@style/Theme.Toolbar.BigTitle" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/_16sdp"
        app:layout_constraintBottom_toTopOf="@+id/cart_complete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cart_toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:itemCount="30"
        tools:listitem="@layout/cart_item" />

    <TextView
        android:id="@+id/cart_total_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:fontFamily="@font/montserrat"
        android:text="@string/total"
        android:textColor="@color/blue"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toTopOf="@+id/cart_total_price_text"
        app:layout_constraintStart_toStartOf="@+id/cart_total_price_text" />

    <TextView
        android:id="@+id/cart_total_price_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_16sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cart_complete_button"
        android:layout_width="@dimen/_130sdp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_16sdp"
        android:background="@drawable/main_button_background"
        android:fontFamily="@font/montserrat_bold"
        android:minHeight="0dp"
        android:text="@string/complete"
        android:textSize="@dimen/textSizeLarge"
        app:layout_constraintBottom_toBottomOf="@+id/cart_total_price_text"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/cart_empty_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty"
        android:visibility="gone"
        android:fontFamily="@font/montserrat_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>